@@ -1,0 +1,1 @@
+POTFILES.in
