@@ -30,11 +30,14 @@ merge:
 	    mv -f "$$n"t "$$n"; \
 	done
 
-$(PGOAL).pot: $(PL_FILES)
-	intltool-update --gettext-package desktopstuff --pot
-	perl_checker -q --generate-pot $(PGOAL)_tmp.pot $(PL_FILES)
-	[ ! -e $(PGOAL)_tmp.pot ] || msgcat --use-first $(PGOAL)_tmp.pot desktopstuff.pot > $@
-	rm -f desktopstuff.pot $(PGOAL)_tmp.pot 
+$(PGOAL).pot: $(PL_FILES) POTFILES.in
+	intltool-update --gettext-package non-perl --pot
+	perl_checker -q --generate-pot .$@ $(PL_FILES)
+	msgcat -w 2048 --use-first .$@ non-perl.pot > $@
+	rm -f non-perl.pot .$@
+
+POTFILES.in:
+	(cd .. ; /bin/ls -1 *.desktop.in polkit/*.policy.in; ) > POTFILES.in
 
 install: all
 	for l in $(LANGS); do \
@@ -43,7 +46,7 @@ install: all
 	done
 
 clean:
-	@rm -rf *~ *.mo $(GOALS) $(PGOAL)_tmp.pot
+	@rm -rf *~ *.mo $(GOALS) $(PGOAL)_tmp.pot POTFILES.in
 
 test:
 
