@@ -1,1 +1,0 @@
-gurpmi.desktop.in
