@@ -1,3 +1,5 @@
+- use polkit for authorisation (mga#11125)
+
 Version 7.27.4 - 4 October 2013, by Thierry Vignaud
 
 - library:
